--- a/packages/solid-sfc/package.json
+++ b/packages/solid-sfc/package.json
@@ -61,6 +61,7 @@
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@babel/plugin-syntax-jsx": "^7.16.0",
     "@babel/types": "^7.16.0",
     "babel-plugin-solid-labels": "^0.9.4",
     "babel-preset-solid": "^1.2.5",
