--- a/packages/solid-sfc/package.json
+++ b/packages/solid-sfc/package.json
@@ -65,6 +65,7 @@
     "@babel/types": "^7.16.0",
     "babel-plugin-solid-labels": "^0.9.4",
     "babel-preset-solid": "^1.2.5",
+    "solid-refresh": "^0.2.2",
     "dom-serializer": "^1.3.2",
     "domhandler": "^4.2.2",
     "htmlparser2": "^7.2.0",
