--- a/packages/solid-sfc/package.json
+++ b/packages/solid-sfc/package.json
@@ -66,10 +66,8 @@
     "babel-plugin-solid-labels": "^0.9.4",
     "babel-preset-solid": "^1.2.5",
     "solid-refresh": "^0.2.2",
-    "dom-serializer": "^1.3.2",
-    "domhandler": "^4.2.2",
-    "htmlparser2": "^7.2.0",
-    "mustache": "^4.2.0"
+    "node-html-parser": "^5.1.0",
+    "source-map": "^0.7.3"
   },
   "private": false,
   "description": "SFC for Solid",
