--- a/packages/solid-sfc/package.json
+++ b/packages/solid-sfc/package.json
@@ -49,7 +49,6 @@
   ],
   "devDependencies": {
     "@types/jest": "^27.0.2",
-    "@types/mustache": "^4.1.2",
     "@types/node": "^16.11.7",
     "eslint": "^7.32.0",
     "eslint-config-lxsmnsyc": "^0.3.0",
@@ -62,7 +61,9 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@babel/plugin-syntax-jsx": "^7.16.0",
+    "@babel/generator": "^7.16.0",
     "@babel/types": "^7.16.0",
+    "@babel/parser": "7.16.4",
     "babel-plugin-solid-labels": "^0.9.4",
     "babel-preset-solid": "^1.2.5",
     "solid-refresh": "^0.2.2",
