--- a/examples/counter/package.json
+++ b/examples/counter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "counter",
-  "version": "0.10.10",
+  "version": "0.0.2",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,10 +12,10 @@
     "eslint": "^7.32.0",
     "eslint-config-lxsmnsyc": "^0.3.0",
     "postcss": "^8.3.11",
+    "rollup-plugin-solid-sfc": "0.0.2",
+    "solid-sfc": "0.0.2",
     "typescript": "^4.4.4",
-    "vite": "^2.6.13",
-    "solid-sfc": "^0.0.1",
-    "rollup-plugin-solid-sfc": "^0.0.1"
+    "vite": "^2.6.13"
   },
   "dependencies": {
     "solid-js": "^1.2.1",
