--- a/packages/esbuild-plugin-solid-sfc/package.json
+++ b/packages/esbuild-plugin-solid-sfc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esbuild-plugin-solid-sfc",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "types": "dist/types/index.d.ts",
   "main": "dist/cjs/production/index.js",
   "module": "dist/esm/production/index.js",
@@ -50,14 +50,14 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.7",
+    "esbuild": "^0.14.2",
     "eslint": "^7.32.0",
     "eslint-config-lxsmnsyc": "^0.3.0",
     "pridepack": "1.0.3",
+    "solid-sfc": "0.0.2",
     "ts-jest": "^27.0.7",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.4",
-    "solid-sfc": "0.0.1",
-    "esbuild": "^0.14.2"
+    "typescript": "^4.4.4"
   },
   "peerDependencies": {
     "esbuild": "^0.14.2",
