--- a/packages/rollup-plugin-solid-sfc/package.json
+++ b/packages/rollup-plugin-solid-sfc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rollup-plugin-solid-sfc",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "types": "dist/types/index.d.ts",
   "main": "dist/cjs/production/index.js",
   "module": "dist/esm/production/index.js",
@@ -53,11 +53,11 @@
     "eslint": "^7.32.0",
     "eslint-config-lxsmnsyc": "^0.3.0",
     "pridepack": "1.0.3",
+    "rollup": "^2.60.1",
+    "solid-sfc": "0.0.2",
     "ts-jest": "^27.0.7",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.4",
-    "solid-sfc": "0.0.1",
-    "rollup": "^2.60.1"
+    "typescript": "^4.4.4"
   },
   "peerDependencies": {
     "rollup": "^2.60.1",
