--- a/examples/counter/package.json
+++ b/examples/counter/package.json
@@ -8,18 +8,19 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.3.7",
-    "babel-preset-solid": "^1.2.6",
-    "eslint": "^7.32.0",
-    "eslint-config-lxsmnsyc": "^0.3.0",
+    "babel-plugin-solid-labels": "^0.10.0",
+    "babel-plugin-solid-sfc": "0.0.12",
+    "eslint": "^8.6.0",
+    "eslint-config-lxsmnsyc": "^0.4.0",
     "postcss": "^8.3.11",
-    "rollup-plugin-solid-sfc": "0.0.12",
-    "solid-sfc": "0.0.12",
+    "solid-refresh": "^0.4.0",
     "typescript": "^4.5.4",
-    "vite": "^2.7.3"
+    "vite": "^2.7.12",
+    "vite-plugin-solid": "^2.2.0"
   },
   "dependencies": {
-    "solid-js": "^1.2.6",
-    "tailwindcss": "^2.2.17"
+    "solid-js": "^1.3.3",
+    "tailwindcss": "^3.0.15"
   },
   "private": true,
   "publishConfig": {
